# DA-correlation-military-expenditures-distance

./: README.md  military_expenditures_europe.csv  pyproject.toml
data/raw/: city_capitals_coords.csv  sipri_data_raw  sipri_data_raw_tb_4.csv  sipri_data_raw_tb_5.csv  sipri_data_raw_tb_6.csv  sipri_data_raw_tb_7.csv  sipri_data_raw_tb_8.csv
data/refined/: european_military_expenditures.hyper
data/transformed/: military_expenditures_final.csv  sipri_dataset.csv
notebooks/: 01_get_data.ipynb  02_transform_data.ipynb
