[tool.poetry]
name = "da-correlation-military-expenditures-distance"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
geopy = "^2.4.1"
tableauhyperapi = "^0.0.21408"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
